target/classes/META-INF/fabric8/openshift/spring-petclinic-customers-service-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 2cd08f8f7ece61435cefece38bd667283469e30e
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-petclinic-customers-service&var-version=1.5.9
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-petclinic-microservices/spring-petclinic-customers-service
  labels:
    project: spring-petclinic-customers-service
    version: 1.5.9
    app: spring-petclinic-customers-service
    provider: fabric8
    group: org.springframework.samples.petclinic.client
  name: spring-petclinic-customers-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-petclinic-customers-service
    provider: fabric8
    group: org.springframework.samples.petclinic.client
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 2cd08f8f7ece61435cefece38bd667283469e30e
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-petclinic-customers-service&var-version=1.5.9
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-petclinic-microservices/spring-petclinic-customers-service
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-tag: HEAD
      labels:
        project: spring-petclinic-customers-service
        version: 1.5.9
        app: spring-petclinic-customers-service
        provider: fabric8
        group: org.springframework.samples.petclinic.client
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-petclinic-customers-service:1.5.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8088
          name: radan-http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-petclinic-customers-service:1.5.9
    type: ImageChange
