target/classes/META-INF/fabric8/openshift/customer-service-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 2cd08f8f7ece61435cefece38bd667283469e30e
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-petclinic-microservices/spring-petclinic-customers-service
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
  labels:
    expose: "true"
    app: spring-petclinic-customers-service
    provider: fabric8
    version: 1.5.9
    group: org.springframework.samples.petclinic.client
  name: customer-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8088
  selector:
    app: spring-petclinic-customers-service
    provider: fabric8
    group: org.springframework.samples.petclinic.client
