target/classes/META-INF/fabric8/openshift/customer-service-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: spring-petclinic-customers-service
    provider: fabric8
    version: 1.5.9
    group: org.springframework.samples.petclinic.client
  name: customer-service
spec:
  port:
    targetPort: 8088
  to:
    kind: Service
    name: customer-service
