target/classes/META-INF/fabric8/openshift/spring-petclinic-customers-service-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: spring-petclinic-customers-service
    provider: fabric8
    version: 1.5.9
    group: org.springframework.samples.petclinic.client
  name: spring-petclinic-customers-service
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: customer-service
